pkg/ibmvpc/examples/out/explain_out/VsiToVsi3_all_vpcs_explain.txt
Connectivity explanation between vsi3a-ky[10.240.30.5] and vsi1-ky[10.240.10.4]
The following connection exists between vsi3a-ky[10.240.30.5] and vsi1-ky[10.240.10.4]: All Connections
Egress: security group sg3-ky allows connection (with allow rules); network ACL acl3-ky allows connection (with allow rules), Ingres: network ACL acl1-ky allows connection (with allow rules); security group sg1-ky allows connection (with allow rules)

Rules details:
~~~~~~~~~~~~~~
Egress:
security group sg3-ky allows connection with the following allow rules
	index: 0, direction: outbound, protocol: all, cidr: 0.0.0.0/0
	index: 2, direction: outbound,  conns: protocol: tcp,  dstPorts: 1-65535, cidr: 0.0.0.0/0
	index: 3, direction: outbound,  conns: protocol: tcp,  dstPorts: 100-200, cidr: 0.0.0.0/0
network ACL acl3-ky allows connection with the following allow rules
	index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
Ingress:
network ACL acl1-ky allows connection with the following allow rules
	index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
security group sg1-ky allows connection with the following allow rules
	index: 4, direction: inbound, protocol: all, cidr: 10.240.30.5/32,10.240.30.6/32
